# Profile

cublasXtSgemm/scripts/: CMakeLists.txt  cublas_wrapper.c  cublas_wrapper.h  profile_all_cublasXtSgemm_ncu.sh  profile_cublasXtSgemm_ncu.py
gemm/: process_all_profiles.py  process_profiling_data.py  profile_all_gemm.sh  profile_all_gemm_nsys.sh  profile_gemm_ncu.py  profile_gemm_nsys.py  profile_gemm_single.py
gemm/data/: gemm_data.csv
gemm/profiled_data/: gemm_n1024_k10240_m1024.csv  gemm_n1024_k10240_m512.csv  gemm_n1024_k1024_m1024.csv  gemm_n1024_k1024_m1536.csv  gemm_n1024_k1024_m2048.csv  gemm_n1024_k1024_m512.csv  gemm_n1024_k1024_m768.csv  gemm_n1024_k11008_m1024.csv  gemm_n1024_k128_m1024.csv  gemm_n1024_k13824_m1024.csv  gemm_n1024_k16384_m1024.csv  gemm_n1024_k20480_m1024.csv  gemm_n1024_k2048_m1024.csv  gemm_n1024_k2048_m1536.csv  gemm_n1024_k2048_m2048.csv  gemm_n1024_k2560_m1024.csv  gemm_n1024_k2560_m512.csv  gemm_n1024_k28672_m1024.csv  gemm_n1024_k4096_m1024.csv  gemm_n1024_k4096_m768.csv  gemm_n1024_k5120_m1024.csv  gemm_n1024_k5120_m512.csv  gemm_n1024_k64_m1024.csv  gemm_n1024_k7168_m1024.csv  gemm_n1024_k768_m1024.csv  gemm_n1024_k80_m1024.csv  gemm_n1024_k8192_m1024.csv  gemm_n1024_k9216_m1024.csv  gemm_n128_k10240_m128.csv  gemm_n128_k1024_m128.csv  gemm_n128_k11008_m128.csv  gemm_n128_k128_m128.csv  gemm_n128_k13824_m128.csv  gemm_n128_k16384_m128.csv  gemm_n128_k20480_m128.csv  gemm_n128_k2048_m128.csv  gemm_n128_k2560_m128.csv  gemm_n128_k28672_m128.csv  gemm_n128_k3072_m128.csv  gemm_n128_k36864_m128.csv  (+271 more)
